# Chat

./: meson.build  meson_options.txt
.hg/: dirstate  last-message.txt  undo.backup.dirstate  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache  undo.phaseroots
.hg/store/data/: meson__options.txt.i  ~2ehgignore.i
.hg/store/data/include/: chat__client.h.i  chat__server.h.i  client.h.i  includes.h.i  networking.h.i
.hg/store/data/src/: _chat.proto.i  config.json.i  includes.cpp.i  json.cpp.i  main.cpp.i
.hg/store/data/src/chat__client/: chat__client.cpp.i  main.cpp.i
.hg/store/data/src/chat__server/: chat__server.cpp.i  main.cpp.i
include/: chat_client.h  chat_server.h  client.h  includes.h  networking.h
src/: Chat.proto  config.json
src/chat_client/: chat_client.cpp  main.cpp
src/chat_server/: chat_server.cpp  main.cpp
