option('asio_include_dir', type : 'string', value : '/home/mario/asio/asio/include', description : 'the include dir of asio')
option('spdlog_include_dir', type : 'string', value : '/home/mario/spdlog/include', description : 'the include dir of spdlog')
option('clipp_include_dir', type : 'string', value : '/home/mario/clipp/include', description : 'the include dir of clipp')
#option('cli11_include_dir', type : 'string', value : '', description : 'the dir containing CLI11.hpp')
#option('fmt_include_dir', type : 'string', value : '', description : 'the include dir of fmt')
option('json_include_dir', type : 'string', value : '/home/mario/json/', description : 'the include dir of json')
